# milter-alias

./: .gitignore  CMakeLists.txt  LICENSE  README.md  doxyfile.in  milter-alias.kdev4
.github/workflows/: sonarcloud.yml
doc/: CMakeLists.txt
etc/: milter-alias.conf  milter-alias.service
src/: CMakeLists.txt  daemon.c  daemon.h  extfile.c  extfile.h  extldap.c  extldap.h  extstring.c  extstring.h  ini_parser.c  ini_parser.h  log.c  log.h  main.c  priv_data.c  priv_data.h  runtime_setting.c  runtime_setting.h  service_manager.c  service_manager.h  smfi.c  smfi.h  smfi_cb.c  smfi_cb.h  string_array.c  string_array.h
tests/: CMakeLists.txt  extstring.c  main.c  string_array.c  test_extstring.c  test_string_array.c
